<?xml version="1.0"?>
<package>
  <name>provider_can</name>
  <version>1.0.0</version>
  <description>
    The provider_can package is the software layer that allows us to communicate with
    the Kvaser CAN device.
  </description>

  <author>Alexi Demers</author>

  <maintainer email="alexidemers@gmail.com">Alexi Demers</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>lib_atlas</build_depend>
  <build_depend>sonia_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>lib_atlas</run_depend>
  <run_depend>sonia_msgs</run_depend>
</package>
